PDS-59 update main content/ fix z-index

--- a/src/app/components/idea-page/main-content/main-content.component.css
+++ b/src/app/components/idea-page/main-content/main-content.component.css
@@ -49,7 +49,7 @@ h3 {
 .header-content::before {
     content: '';
     position: absolute;
-    z-index: 10;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100%;
@@ -60,7 +60,7 @@ h3 {
 
 .header-content div {
     position: relative;
-    z-index: 50;
+    z-index: 2;
     margin-bottom: 25px;
 }
 
